change codecov workflow